增加 推送镜像到 hub.docker.com

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -30,3 +30,12 @@ startsecs=5
 priority=1
 stopasgroup=true
 killasgroup=true
+
+[program:mariadb]
+command=/data/stock/jobs/start_mariadb.sh
+autostart=true
+autorestart=true
+startsecs=20
+priority=1
+stopasgroup=true
+killasgroup=true
