增加 推送镜像到 hub.docker.com

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -31,8 +31,8 @@ priority=1
 stopasgroup=true
 killasgroup=true
 
-[program:mariadb]
-command=/data/stock/jobs/start_mariadb.sh
+[program:stock-web]
+command=/usr/bin/python /data/stock/web/main.py
 autostart=true
 autorestart=true
 startsecs=20
