使用 python2 重构系统代码。因为好多原因吧。

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -26,13 +26,31 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 command=/usr/local/bin/tensorboard --logdir=/data/logs/tensorflow
 autostart=true
 autorestart=true
-startsecs=5
+startsecs=20
 priority=1
 stopasgroup=true
 killasgroup=true
 
 [program:stock-web]
 command=/usr/bin/python /data/stock/web/main.py
+autostart=true
+autorestart=true
+startsecs=20
+priority=1
+stopasgroup=true
+killasgroup=true
+
+[program:jupyter]
+command=/usr/local/bin/jupyter notebook --allow-root --NotebookApp.token='' --notebook-dir=/data/notebooks
+autostart=true
+autorestart=true
+startsecs=20
+priority=1
+stopasgroup=true
+killasgroup=true
+
+[program:init_and_cron]
+command=/data/stock/jobs/run_init.sh
 autostart=true
 autorestart=true
 startsecs=20
