--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -32,7 +32,7 @@ stopasgroup=true
 killasgroup=true
 
 [program:stock-web]
-command=/usr/bin/python /data/stock/web/main.py
+command=/usr/local/bin/python3 /data/stock/web/main.py
 autostart=true
 autorestart=true
 startsecs=20
