设置使用 脚本启动，方便看 web 启动日志。

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -23,7 +23,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:stock-web]
-command=/usr/local/bin/python3 /data/stock/web/main.py
+command=/data/stock/jobs/run_web.sh
 autostart=true
 autorestart=true
 startsecs=20
