修改nginx 配置。 解决 large_client_header_buffers 太大问题。

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+# 设置nginx启动
+# systemctl enable nginx
 server {
     listen       8080;
     server_name  www.pythonstock.com;
@@ -19,6 +21,12 @@ server {
 
     access_log /var/log/nginx/stock.access.log main;
     error_log /var/log/nginx/stock.error.log warn;
+
+    # https://medium.com/aviabird/413-414-request-url-entity-too-large-error-nginx-b6dcece6f5dd
+    # 解决GET 参数过长问题。
+    client_max_body_size 10M;
+    large_client_header_buffers 4 20k;
+
 
     location ^~ /static/ {
         access_log off;
