--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
             MYSQL_USER: root
             MYSQL_PWD: mysqldb
             MYSQL_DB: stock_data
-            LANG: en_US.UTF-8
-            LC_ALL: en_US.UTF-8
+            LANG: zh_CN.UTF-8
+            LC_CTYPE: zh_CN.UTF-8
+            PYTHONIOENCODING: utf-8
             # 测试使用，自己需注册，申请：https://tushare.pro/user/token
             TUSHARE_TOKEN: 007b2f24bc3afb5ff5c604b0aee583956840210348169bc2436bddf9
         links:
