解决docker 镜像 依赖 AKshare 库问题。

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ nohup.out
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test_akshare / coverage reports
 htmlcov/
 .tox/
 .coverage
