--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,7 +53,7 @@ RUN apt-get update
 RUN apt-get install --assume-yes apt-utils
 
 RUN apt-get install -y net-tools procps gcc make default-libmysqlclient-dev cron && \
-    pip3 install mysqlclient
+    pip3 install mysqlclient && \
     apt-get --purge remove -y gcc make default-libmysqlclient-dev && \
     pip3 install supervisor sqlalchemy && \
     pip3 install numpy pandas  && \
